# MachineGaming

./: CMakeLists.txt  README.md  config.doxygen  install.sh  run.sh
doc/html/: Connection_8h_source.html  Counter_8hpp_source.html  EvolutionaryAlgorithmWrapper_8h_source.html  EvolutionaryAlgorithm_8h_source.html  Gene_8h_source.html  Genome_8h_source.html  Genotype_8hpp_source.html  MutationType_8h_source.html  NeuralNetworkWrapper_8h_source.html  NeuralNetwork_8h_source.html  Neuron_8h_source.html  Phenome_8h_source.html  Random_8h_source.html  annotated.html  classAsteroid_1_1Asteroid-members.html  classAsteroid_1_1Asteroid.html  classAsteroid_1_1Asteroid__coll__graph.md5  classAsteroid_1_1Asteroid__inherit__graph.map  classAsteroid_1_1Asteroid__inherit__graph.md5  classConnection-members.html  classConnection.html  classConnection__inherit__graph.map  classConnection__inherit__graph.md5  classCoordinates_1_1Coordinates-members.html  classCoordinates_1_1Coordinates.html  classCounter-members.html  classCounter.html  classEvolutionaryAlgorithm-members.html  classEvolutionaryAlgorithm.html  classEvolutionaryAlgorithmWrapper-members.html  classEvolutionaryAlgorithmWrapper.html  classGameController_1_1GameController-members.html  classGameController_1_1GameController.html  classGameWindow_1_1GameWindow-members.html  classGameWindow_1_1GameWindow.html  classGene-members.html  classGene.html  classGene__inherit__graph.map  classGene__inherit__graph.md5  classGenome-members.html  (+124 more)
doc/html/search/: all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  classes_0.js  classes_1.js  classes_3.js  classes_4.js  classes_8.js  classes_a.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  namespaces_0.js  pages_0.js  searchdata.js
doc/latex/: annotated.tex  classAsteroid_1_1Asteroid.tex  classAsteroid_1_1Asteroid__coll__graph.md5  classAsteroid_1_1Asteroid__inherit__graph.md5  classConnection.tex  classConnection__inherit__graph.md5  classCoordinates_1_1Coordinates.tex  classCounter.tex  classEvolutionaryAlgorithm.tex  classEvolutionaryAlgorithmWrapper.tex  classGameController_1_1GameController.tex  classGameWindow_1_1GameWindow.tex  classGene.tex  classGene__inherit__graph.md5  classGenome.tex  classGenotype.tex  classMachineGamingController_1_1MachineGamingController.tex  classMachineGamingWindow_1_1MachineGaming.tex  classMachineGamingWindow_1_1MachineGaming__inherit__graph.md5  classMissile_1_1Missile.tex  classMissile_1_1Missile__coll__graph.md5  classMovingObject_1_1MovingObject.tex  classMovingObject_1_1MovingObject__coll__graph.md5  classMovingObject_1_1MovingObject__inherit__graph.md5  classNeuralNetwork.tex  classNeuralNetworkWrapper.tex  classNeuron.tex  classNeuron__coll__graph.md5  classPhenome.tex  classRandom.tex  classSpaceship_1_1Spaceship.tex  classSpaceship_1_1Spaceship__coll__graph.md5  classSpaceship_1_1Spaceship__inherit__graph.md5  classVector_1_1Vector.tex  classpyvolutionTest_1_1pyvolutionTest.tex  classpyvolutionTest_1_1pyvolutionTest__coll__graph.md5  dir_07df83f40918f7501b465e30afd00040.tex  dir_143b5f1b72c59a057b57a1ef4cdc970d.tex  dir_14e07faf3d815f1aca245c7d62887211.tex  dir_15ab6591549d9c0f3230eb88d44c2970.tex  (+23 more)
include/armadillo_bits/: arma_str.hpp
res/Asteroids/: CMakeLists.txt
src/: CMakeLists.txt
src/AI/: CMakeLists.txt  Connection.cc  Connection.h  Coordinates.cc  Coordinates.h  Counter.hpp  EvolutionaryAlgorithm.cc  EvolutionaryAlgorithm.h  EvolutionaryAlgorithmWrapper.cc  EvolutionaryAlgorithmWrapper.h  Gene.cc  Gene.h  Genome.cc  Genome.h  Genotype.cc  Genotype.h  Genotype.hpp  MutationType.h  NeuralNetwork.cc  NeuralNetwork.h  NeuralNetworkProxy.cc  NeuralNetworkProxy.h  NeuralNetworkWrapper.cc  NeuralNetworkWrapper.h  Neuron.cc  Neuron.h  Phenome.cc  Phenome.h  Phenotype.cc  Phenotype.h  Random.cc  Random.h  evolutionaryalgorithm_ext.cc  neuralnetwork_ext.cc  pyvolution.cc
src/Asteroids/: Asteroid.py  AsteroidGenerator.py  Asteroids.py  CMakeLists.txt  Config.py  Coordinates.py  GUILabels.py  GameController.py  GameWindow.py  Labels.py  MachineGaming.py  MachineGamingController.py  MachineGamingWindow.py  Missile.py  Missle.py  MovingObject.py  Spaceship.py  Vector.py
test/: CMakeLists.txt
test/AI/: CMakeLists.txt  CounterTest.cc  EvolutionaryAlgorithmTest.cc  GeneTest.cc  GenomeTest.cc  GenotypeTest.cc  Main.cc  NeuralNetworkTest.cc  PhenomeTest.cc  PhenotypeTest.cc  WrappersTest.cc  pyvolutionProxyTest.cc  pyvolutionTest.py  pyvolutionWrapperTest.cc
